Developer Material Page updates: Added a spacer to the page to prevent content wrapper from overlapping footer.

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -1674,3 +1674,9 @@ span.asterisk {
     margin-left: 100px;
     padding-top: 5px;
 }
+
+.space,.spacer {
+	width:100%;
+	height:1px;
+	clear:both;
+}
